$Header$
===============================================================

158	Luke Howard <lukeh@padl.com>

	* in the distinguished name to login cache (dn2uid)
	  make sure we use the AT(uid) macro for the uid 
	  attribute rather than the hard-coded value of "uid"
	  This should enable the cache for MSSFU support.

157	Luke Howard <lukeh@padl.com>

	* for MSSFU, use posixMember for group memberships
	  rather than member (reported by Andy Rechenberg)
	* ignore SIGPIPE before calling do_close() for
	  idle_timeout

156	Luke Howard <lukeh@padl.com>

	* logic was around the wrong way in do_search(), 
	  all searches were broken!
	* --disable-ssl option for configure
	* removed "Obsoletes: pam_ldap" from spec file

155	Luke Howard <lukeh@padl.com>

	* do not use private API when setting OpenLDAP TLS
	  options (do_ssl_options())
	
154	Luke Howard <lukeh@padl.com>

	* notes from Scott M. Stone <sstone@foo3.com>
	* idle timeout patch from Steve Barrus

153	Luke Howard <lukeh@padl.com>

	* SSL fix

152	Luke Howard <lukeh@padl.com>

	* further patch from Jarkko for TLS/SSL auth:
	  support for LDAPS/cipher suite selection/
	  client key/cert authentication

151	Luke Howard <lukeh@padl.com>

	* patch from Andrew Rechenberg for Active
	  Directory schema support
	* patch from Jarkko Turkulainen <jt@wapit.com> for
	  peer certificate support with OpenLDAP

150	Luke Howard <lukeh@padl.com>

	* patch from Anselm Kruis for URI support

149	Luke Howard <lukeh@padl.com>

	* fixed compile on Solaris, broken in 145 by
	  malformed Linux patch
	 
148	Luke Howard <lukeh@padl.com>

	* check for HAVE_LDAP_SET_OPTION always

147	Luke Howard <lukeh@padl.com>

	* check for ldap_set_option(), as LDAP_OPT_REFERRALS
	  is defined for OpenLDAP 1.x but without the
	  ldap_set_option() function

146	Luke Howard <lukeh@padl.com>

	* mass reindentation, GNU style
	* patch from Simon Wilkinson <sxw@sxw.org.uk>
	  for compatibility with old initgroups entry
	  point